# Observability-Plane

./: 2026-05-21_phase1-foundation-schema-catalogs-storage.md  2026-05-28_observability-ingestion-service-plan.md  2026-05-28_observability-plane-architecture_v1.md  2026-05-28_tool-recommendations-by-signal.md  2026-06-01_developer-implementation-guide.md  2026-06-01_full-observability-architecture-diagram.md  2026-06-01_kafka-direct-path-architecture.md  2026-06-02_copilot-build-prompts-genai-user-feedback.md  2026-06-12_observability-plane-team-explainer.md  AI_Services_Platform_Observability_Plane_Architecture_With_IntentIQ_KPIs (1).md  BUILD-GUIDE.md  COPILOT_BUILD_PROMPTS.md  Developer_Implementation_Guide.md  EPIC-Observability-Plane.md  FULL_OBSERVABILITY_DIAGRAM.md  INGESTION_ARCHITECTURE_DECISION.md  JIRA  KAFKA_DIRECT_PATH_ARCHITECTURE.md  LANGFUSE_VS_CURRENT_LOGS.md  OBSERVABILITY_COVERAGE_MASTER.md  OBSERVABILITY_INGESTION_SERVICE_PLAN.md  Prompt for User Feedback.txt  Refined_Observability_Architecture.md  TASKS-2dev-phase0-phase1.md  TOOL_RECOMMENDATIONS_BY_SIGNAL.md  UNIFIED_APPLICATION_ARCHITECTURE.md  USER_FEEDBACK_GET_API.md  architecture_diagram.html  copilot-instructions.md  observability-roadmap.html  phase-0-foundation.md  plan.md
.claude/: launch.json
ai-observability-sdk/: .env.example  README.md  pyproject.toml
ai-observability-sdk/ai_obs_sdk/: __init__.py  config.py  context.py  cost.py  decorators.py  emitter.py  hashing.py  kafka_headers.py  log_config.py  middleware.py  prompts.py  tracing.py
ai-observability-sdk/ci/: sdk-ci.yml
(+77 files in other folders)
